# cloud-unmanaged

./: AGENTS.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
src/cloud_index/: aws.py  error.py  progress.py  resource.py
src/cloud_index/aws/: __init__.py  arn.py  client.py  identifier.py  indexer.py  regions.py  resource_type.py  system_resource.py
src/cloud_index/cloudformation/: __init__.py  client.py  identifier.py  indexer.py  resource_type.py
src/cloud_index/internal/aws/: client.py  error.py  indexer.py  resource_type.py  system_resource.py
src/cloud_unmanaged/: db.py  main.py  repository.py
src/cloud_unmanaged/command/: index.py  show.py  show_missing.py
tests/: conftest.py  test_main.py
tests/cloud_index/: conftest.py  test_aws.py  test_client.py  test_identifier.py  test_resource.py  test_resource_type.py  test_system_resource.py
tests/cloud_index/aws/: stubs.py  test_arn.py  test_client.py  test_identifier.py  test_indexer.py  test_init.py  test_regions.py  test_resource_type.py  test_system_resource.py
tests/cloud_index/cloudformation/: stubs.py  test_client.py  test_identifier.py  test_indexer.py  test_init.py  test_resource_type.py
tests/cloud_unmanaged/: conftest.py  test_db.py  test_main.py
tests/cloud_unmanaged/command/: test_index.py  test_show.py  test_show_missing.py
tests/iac_index/: test_arn.py  test_regions.py  test_resource_type.py
tests/iac_unmanaged/: test_index.py
